--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -51,8 +51,8 @@
    "outputs": [],
    "source": [
     "fish_list=['apognon','epinephelus_marginatus','girelle_paon','pempheris_vanicolensis','sparisoma_cretense']\n",
-    "synthetic_data_path = './data/synthetic/'\n",
-    "original_data_path = './data/original/'"
+    "original_data_path = './data/original/'\n",
+    "synthetic_data_path = './data/synthetic/'"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Renommer les fichiers"
+    "### Rename files"
    ]
   },
   {
