--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -18,9 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msn\u001b[39;00m \n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtensorflow\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtf\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -28,6 +40,98 @@
     "import seaborn as sn \n",
     "import tensorflow as tf\n",
     "from keras import  layers, models\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📂 Traitement de : apogon_imberbis (62 images)\n",
+      "✅ 62 images renommées avec succès dans 'apogon_imberbis'\n",
+      "\n",
+      "📂 Traitement de : epinephelus_marginatus (61 images)\n",
+      "✅ 61 images renommées avec succès dans 'epinephelus_marginatus'\n",
+      "\n",
+      "📂 Traitement de : pempheris_vanicolensis (61 images)\n",
+      "✅ 61 images renommées avec succès dans 'pempheris_vanicolensis'\n",
+      "\n",
+      "📂 Traitement de : sparisoma_cretense (46 images)\n",
+      "✅ 46 images renommées avec succès dans 'sparisoma_cretense'\n",
+      "\n",
+      "📂 Traitement de : thalassoma_pavo (62 images)\n",
+      "✅ 62 images renommées avec succès dans 'thalassoma_pavo'\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def rename_images(folder_path, prefix):\n",
+    "    \"\"\"\n",
+    "    Renomme toutes les images d'un dossier avec un préfixe et un index.\n",
+    "    Ex: prefix_000.jpg, prefix_001.jpg\n",
+    "    \"\"\"\n",
+    "    folder = Path(folder_path)\n",
+    "    \n",
+    "    if not folder.exists():\n",
+    "        print(f\"❌ Erreur : Le dossier {folder} n'existe pas.\")\n",
+    "        return\n",
+    "\n",
+    "    # Extensions d'images supportées\n",
+    "    valid_extensions = {\".jpg\", \".jpeg\", \".png\", \".webp\", \".bmp\"}\n",
+    "    \n",
+    "    # Récupérer les fichiers et les trier (pour garder l'ordre actuel si possible)\n",
+    "    files = [f for f in folder.iterdir() if f.is_file() and f.suffix.lower() in valid_extensions]\n",
+    "    files.sort()\n",
+    "\n",
+    "    print(f\"📂 Traitement de : {folder.name} ({len(files)} images)\")\n",
+    "\n",
+    "    count = 0\n",
+    "    for index, file in enumerate(files):\n",
+    "        # f\"{index:04d}\" génère 0000, 0001, ... (utile jusqu'à 9999 images)\n",
+    "        new_name = f\"{prefix}_{index:04d}{file.suffix.lower()}\"\n",
+    "        new_path = folder / new_name\n",
+    "\n",
+    "        # Sécurité : Si le fichier porte déjà le bon nom, on passe\n",
+    "        if new_path == file:\n",
+    "            continue\n",
+    "            \n",
+    "        # Sécurité : Si le nom cible existe déjà (conflit), on alerte\n",
+    "        if new_path.exists():\n",
+    "            print(f\"⚠️  Conflit : {new_name} existe déjà. Skipped.\")\n",
+    "            continue\n",
+    "\n",
+    "        file.rename(new_path)\n",
+    "        count += 1\n",
+    "\n",
+    "    print(f\"✅ {count} images renommées avec succès dans '{folder.name}'\\n\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # --- CONFIGURATION ---\n",
+    "    # Tu peux l'utiliser pour tous tes dossiers d'un coup\n",
+    "    \n",
+    "    root_data = Path(\"../data/raw\") # Ton dossier racine\n",
+    "    \n",
+    "    # Liste de tes dossiers (ou scan automatique)\n",
+    "    species_folders = [\n",
+    "        \"apogon_imberbis\",\n",
+    "        \"epinephelus_marginatus\",\n",
+    "        \"pempheris_vanicolensis\",\n",
+    "        \"sparisoma_cretense\",\n",
+    "        \"thalassoma_pavo\"\n",
+    "    ]\n",
+    "\n",
+    "    for species in species_folders:\n",
+    "        # On utilise le nom du dossier comme préfixe pour le fichier\n",
+    "        # ex: data/raw/thalassoma_pavo -> thalassoma_pavo_0001.jpg\n",
+    "        rename_images(root_data / species, prefix=species)"
    ]
   },
   {
@@ -309,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cyprus-fish-env",
    "language": "python",
    "name": "python3"
   },
@@ -323,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
