Instanciate dataset in notebook

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -9,6 +9,137 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import hydra\n",
+    "from hydra import initialize, compose\n",
+    "from omegaconf import DictConfig,OmegaConf\n",
+    "import sys\n",
+    "from datasets import load_dataset\n",
+    "from transformers import ConvNextImageProcessor,AutoImageProcessor\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "\n",
+    "# On l'ajoute au chemin de recherche de Python s'il n'y est pas déjà\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.append(project_root)\n",
+    "from src.cyprus_fish.data import CyprusFishDataset\n",
+    "\n",
+    "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
+    "# Change the path of some HF environment variables to store the download data (model and dataset) from the hub to a choosen location\n",
+    "os.environ[\"HF_HOME\"] = \"../.cache\"\n",
+    "os.environ[\"HF_HUB_CACHE\"] = \"../.cache\"\n",
+    "os.environ[\"HF_DATASETS_CACHE\"] = \"../.cache\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds = load_dataset(\"JayRay5/cyprus-fish-dataset\")\n",
+    "processor = AutoImageProcessor.from_pretrained(\"facebook/convnext-tiny-224\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prepare_data:\n",
+      "  raw_path: data/raw\n",
+      "  processed_path: data/processed\n",
+      "  split_ratio:\n",
+      "  - 0.8\n",
+      "  - 0.2\n",
+      "  valid_extensions:\n",
+      "  - .jpg\n",
+      "  - .jpeg\n",
+      "  - .png\n",
+      "  seed: 42\n",
+      "  hf_repo_id: JayRay5/cyprus-fish-dataset\n",
+      "  hf_private: true\n",
+      "data:\n",
+      "  hf_repo_id: JayRay5/cyprus-fish-dataset\n",
+      "  revision: be9dbe8f4048fe5c399a71713fcb8d0cfdd37ae5\n",
+      "  num_classes: 5\n",
+      "  class_names:\n",
+      "  - apogon_imberbis\n",
+      "  - epinephelus_marginatus\n",
+      "  - pempheris_vanicolensis\n",
+      "  - sparisoma_cretense\n",
+      "  - thalassoma_pavo\n",
+      "processor:\n",
+      "  hf_repo_id: facebook/convnext-tiny-224\n",
+      "  revision: 6166b7613034066690a621d8bf25ffdf181a34f0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with initialize(version_base=None, config_path=\"../configs\"):\n",
+    "    \n",
+    "    # 2. Composition de la configuration\n",
+    "    # Tu peux même surcharger des valeurs à la volée avec 'overrides'\n",
+    "    cfg = compose(config_name=\"config\")\n",
+    "\n",
+    "# (Optionnel) Affiche la config pour vérifier que tout est bon\n",
+    "print(OmegaConf.to_yaml(cfg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = CyprusFishDataset(\n",
+    "    repo_id=cfg.data.hf_repo_id,\n",
+    "    repo_revision=cfg.data.revision,\n",
+    "    processor_name=cfg.processor.hf_repo_id,\n",
+    "    processor_revision=cfg.processor.revision,\n",
+    "    split=\"train\",\n",
+    "    num_classes=cfg.data.num_classes\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 224, 224])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dataset[190][0].shape"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
