--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -121,6 +121,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pixel_values': tensor([[[[-1.7412, -1.6898, -1.5357,  ..., -1.0904, -1.1760, -1.3130],\n",
+       "          [-1.7925, -1.7412, -1.6213,  ..., -1.4158, -1.4329, -1.4500],\n",
+       "          [-1.8439, -1.8268, -1.7754,  ..., -1.6384, -1.5699, -1.4843],\n",
+       "          ...,\n",
+       "          [ 1.5810,  1.6495,  1.7523,  ..., -0.6623, -0.7650, -0.8335],\n",
+       "          [ 1.3927,  1.4098,  1.4612,  ..., -0.4568, -0.5424, -0.5767],\n",
+       "          [ 1.3413,  1.3242,  1.3242,  ..., -0.2856, -0.3369, -0.3369]],\n",
+       "\n",
+       "         [[-1.8606, -1.8606, -1.7206,  ..., -1.1253, -1.2129, -1.3179],\n",
+       "          [-1.9132, -1.9132, -1.8081,  ..., -1.4405, -1.4230, -1.4405],\n",
+       "          [-2.0007, -2.0182, -1.9832,  ..., -1.6331, -1.5455, -1.4580],\n",
+       "          ...,\n",
+       "          [ 1.1856,  1.2381,  1.3606,  ..., -0.6877, -0.7752, -0.8102],\n",
+       "          [ 1.0980,  1.1155,  1.1506,  ..., -0.4951, -0.5476, -0.5476],\n",
+       "          [ 1.1331,  1.1155,  1.1155,  ..., -0.3200, -0.3375, -0.3025]],\n",
+       "\n",
+       "         [[-1.4733, -1.4210, -1.2641,  ..., -0.8807, -0.9678, -1.0898],\n",
+       "          [-1.5081, -1.4559, -1.3339,  ..., -1.2293, -1.2293, -1.2467],\n",
+       "          [-1.5604, -1.5256, -1.4733,  ..., -1.4733, -1.3861, -1.2990],\n",
+       "          ...,\n",
+       "          [ 0.7228,  0.7228,  0.7402,  ..., -0.7936, -0.8807, -0.9330],\n",
+       "          [ 0.7402,  0.6879,  0.6356,  ..., -0.6193, -0.6715, -0.6890],\n",
+       "          [ 0.8797,  0.7925,  0.6879,  ..., -0.4624, -0.4798, -0.4798]]]])}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'test': tensor([2])}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers.image_processing_base import BatchFeature\n",
+    "BatchFeature({\"test\":torch.tensor([2])})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
